<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/gotoClassify"
        android:title="@string/classify_crops"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/gotoMultiDrop"
        android:title="@string/multiple_drop"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/gotoVideoPlayer"
        android:title="@string/video_player"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/settings_option"
        app:showAsAction="never"
        >
        <menu>
            <item
                android:id="@+id/changePass"
                android:title="@string/change_password"
                />
            <item
                android:id="@+id/deleteAccount"
                android:title="@string/delete_account"
                />
        </menu>

    </item>

    <item
        android:id="@+id/gotoRating"
        android:title="Rate us"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never"
        />


</menu>