<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".SignupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:id="@+id/text_view_register_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_head"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

        <TextView
            android:id="@+id/text_view_register_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_marginTop="40dp"
            android:padding="5dp"
            android:textSize="18sp"

            />
        <EditText
            android:id="@+id/edit_text_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_Name"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/border_edittext"
            />

        <TextView
            android:id="@+id/text_view_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_name"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:textSize="18sp"

            />
        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/border_edittext"
            />

        <TextView
            android:id="@+id/singUpEmailErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#CF0202"
            />

        <TextView
            android:id="@+id/text_view_register_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob_name"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:textSize="18sp"

            />
        <EditText
            android:id="@+id/edit_text_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/enter_dob"
            android:focusable="false"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/border_edittext"
            />

        <TextView
            android:id="@+id/text_view_register_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:textSize="18sp"
            />

        <RadioGroup
            android:id="@+id/radio_group_register_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_male"
                android:text="Male"
                android:textSize="18sp"
                android:textColor="#555555"
                android:layout_marginEnd="10dp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_female"
                android:text="Female"
                android:textSize="18sp"
                android:textColor="#555555"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/text_view_register_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_name"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textSize="18sp"

            />
        <EditText
            android:id="@+id/edit_text_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/enter_mobile"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/border_edittext"
            />

        <TextView
            android:id="@+id/text_view_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_name"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:textSize="18sp"

            />
        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/border_edittext"
            />

        <TextView
            android:id="@+id/text_view_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_name"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:textSize="18sp"

            />
        <EditText
            android:id="@+id/edit_text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_confirm_password"
            android:textSize="18sp"
            android:padding="5dp"
            android:background="@drawable/border_edittext"
            />


        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#3F51B5"
            android:textAllCaps="false"
            android:textStyle="bold"
            />

        <ProgressBar
            android:id="@+id/progressBarSignupId"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone" />



    </LinearLayout>


</ScrollView>