<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:layout_margin="10dp"
    android:background="@color/light_gray"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/actionbar_login"
        layout="@layout/common_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:padding="0dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:background="@drawable/animalslogo"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            >

        </com.airbnb.lottie.LottieAnimationView>
<!--        app:lottie_rawRes="@raw/login_lottie"-->

        <TextView
            android:id="@+id/text_view_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/email_name"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/edit_text_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/emailErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#CF0202"
           />



        <TextView
            android:id="@+id/text_view_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/password_name"
            android:textSize="18sp"

            />

        <EditText
            android:id="@+id/edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edittext"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/rememberMeCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Remember me"
            android:layout_gravity="start"

            >

        </CheckBox>


        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:backgroundTint="#3F51B5"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/forget_password"
            android:textColor="@color/purple_700"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/text_view_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_acc"
            android:textColor="@color/purple_700"
            android:textSize="17sp"

            />

        <ProgressBar
            android:id="@+id/progressBarLoginId"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone" />

    </LinearLayout>




</LinearLayout>


